# cpp_training

./: .project  CMakeLists.txt  README.md
include/: helper.h  test.h
src/: cpp_training.cpp  helper.cpp  main.cpp  test.cpp
